Day:4 Adding NoSQL functionality into backend

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,3 +4,5 @@ DB_PASS=yourpassword
 DB_HOST=127.0.0.1
 DB_DIALECT=mysql
 JWT_SECRET=mynameisLakshya
+
+MONGO_URI=mongodb://localhost:27017/hybriddash_logs
